apps/wallets/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wallets
spec:
  selector:
    app: wallets
  ports:
  - port: 8000
    targetPort: 8000
