apps/wallets/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallets
  labels:
    name: wallets
spec:
  rules:
  - host: api.wallets.k8s.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wallets
            port: 
              number: 8000
